--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -83,30 +83,29 @@ color0	#12121f
 color8	#4f5071
 
 # Red
-color1	#d95177
-color9	#d54c73
+color1	#de688a
+color9	#d74770
 
 # Green
-color2	#7bdba6
-color10	#78dca7
+color2	#8fe0b4
+color10	#6fd89e
 
 # Yellow
-color3	#fcf4a2
-color11 #fcf295
+color3	#fdf5b0
+color11 #fcf39c
 
 # Blue
-color4	#759eea
-color12	#6d98e8
+color4	#83a8ec
+color12	#729ce9
 
 # Purple
-color5	#908cdb
-color13	#837dd7
+color5	#8983d8
+color13	#7a73d3
 
 # Cyan
-color6	#6be5e3
+color6	#89e6e4
 color14	#65dedc
 
 # White
 color7	#d4d7ff
-color15	#f4f7ff
-
+color15	#cccfff
