--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -4,33 +4,38 @@ bg-2 = #222236
 bg-3 = #29293f
 
 fg-1 = #d4d7ff
-fg-2 = #e4e7ff
-fg-3 = #f4f7ff
+fg-2 = #d0d3ff
+fg-3 = #cccfff
 
-red-1 = #d54c73
-red-2 = #d95177
-red-3 = #df4e75
+grey-1 = #4f5071
+grey-2 = #595b7e
+grey-3 = #63658b
 
-green-1 = #78dca7
-green-2	= #7bdba6
-green-3	= #84e5ac
+red-1 = #de688a
+red-2 = #da587d
+red-3 = #d74770
 
-yellow-1 = #fcf295
+purple-1 = #9792dd
+purple-2 = #8983d8
+purple-3 = #7a73d3
+
+blue-1 = #83a8ec
+blue-2 = #729ce9
+blue-3 = #608fe6
+
+cyan-1 = #89e6e4
+cyan-2 = #78e2e1
+cyan-3 = #65dedc
+
+green-1 = #8fe0b4
+green-2	= #7fdca9
+green-3	= #6fd89e
+
+yellow-1 = #fdf5b0
 yellow-2 = #fcf39c
-yellow-3 = #fcf4a2
+yellow-3 = #fbf088
 
-blue-1 = #6d98e8
-blue-2 = #759eea
-blue-3 = #7ea4ec
+orange-1 = #e7c188
+orange-2 = #e3b878
+orange-3 = #e0af67
 
-cyan-1 = #65dedc
-cyan-2 = #6be5e3
-cyan-3 = #72e7e5
-
-orange-1 = #e3b56f
-orange-2 = #e5b976
-orange-3 = #e5ba7a
-
-purple-1 = #837dd7
-purple-2 = #8783d9
-purple-3 = #908cdb
