--- a/.config/bottom/bottom.toml
+++ b/.config/bottom/bottom.toml
@@ -95,7 +95,7 @@ border_color="#d4d7ff"
 # Represents the colour of the border of selected widgets.
 highlighted_border_color="LightBlue"
 # Represents the colour of most text.
-text_color="#e4e7ff"
+text_color="#daddff"
 # Represents the colour of text that is selected.
 selected_text_color="#d4d7ff"
 # Represents the background colour of text that is selected.
@@ -104,7 +104,7 @@ selected_bg_color="#29293f"
 graph_color="#d4d7ff"
 # Represents the colours of the battery based on charge
 high_battery_color="LightRed"
-medium_battery_color="#e3b56f"	# orange
+medium_battery_color="#3eb878"	# orange
 low_battery_color="LightYellow"
 
 # Layout - layouts follow a pattern like this:
