--- a/.config/polybar/modules/sys_info.ini
+++ b/.config/polybar/modules/sys_info.ini
@@ -4,26 +4,26 @@ interval = 25
 
 mount-0 = /
 format-mounted-prefix = " "
-format-mounted-prefix-underline = ${colors.purple-1}
+# format-mounted-prefix-underline = ${colors.purple-1}
 format-mounted-prefix-background = ${colors.bg-1}
 format-mounted-prefix-foreground = ${colors.purple-2}
 label-mounted = %used%
-label-mounted-underline = ${colors.purple-1}
+# label-mounted-underline = ${colors.purple-1}
 label-mounted-background = ${colors.bg-1}
-label-mounted-foreground = ${colors.fg-3}
+label-mounted-foreground = ${colors.fg-1}
 
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-underline = ${colors.cyan-2}
+# format-prefix-underline = ${colors.cyan-2}
 format-prefix-foreground = ${colors.cyan-2}
 format-background = ${colors.bg-1}
 format = <label> 
 label = %percentage%%
-label-underline = ${colors.cyan-2}
-label-foreground = ${colors.fg-3}
+# label-underline = ${colors.cyan-2}
+label-foreground = ${colors.fg-1}
 
 
 [module/temperature]
@@ -35,37 +35,37 @@ units = true
 
 format = <label>
 format-prefix = " "
-format-prefix-underline = ${colors.blue-1}
+# format-prefix-underline = ${colors.blue-1}
 format-prefix-background = ${colors.bg-1}
 format-prefix-foreground = ${colors.blue-2}
 
 format-warn = <label-warn>
 format-warn-prefix = " "
-format-warn-prefix-underline = ${colors.yellow-3}
+# format-warn-prefix-underline = ${colors.yellow-3}
 format-warn-prefix-background = ${colors.bg-1}
 format-warn-prefix-foreground = ${colors.yellow-3}
 
 label = %temperature-c%
-label-underline = ${colors.blue-1}
+# label-underline = ${colors.blue-1}
 label-background = ${colors.bg-1}
-label-foreground = ${colors.fg-3}
+label-foreground = ${colors.fg-1}
 
 label-warn = %temperature-c%
-label-warn-underline = ${colors.yellow-3}
+# label-warn-underline = ${colors.yellow-3}
 label-warn-background = ${colors.bg-1}
-label-warn-foreground = ${colors.fg-3}
+label-warn-foreground = ${colors.fg-1}
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-underline = ${colors.red-2}
+# format-prefix-underline = ${colors.red-2}
 format-prefix-background = ${colors.bg-1}
 format-prefix-foreground = ${colors.red-2}
 format-background = ${colors.bg-1}
 label = %percentage_used:2%%
-label-underline = ${colors.red-2}
-label-foreground = ${colors.fg-3}
+# label-underline = ${colors.red-2}
+label-foreground = ${colors.fg-1}
 
 
 [module/battery]
@@ -80,11 +80,11 @@ time-format = %H:%M
 
 format-charging = <animation-charging><label-charging>
 label-charging = %percentage%%
-label-charging-underline = ${colors.red-2}
+# label-charging-underline = ${colors.red-2}
 label-charging-background = ${colors.bg-1}
-label-charging-foreground = ${colors.fg-3}
+label-charging-foreground = ${colors.fg-1}
 
-animation-charging-underline = ${colors.red-2}
+# animation-charging-underline = ${colors.red-2}
 animation-charging-background = ${colors.bg-1}
 animation-charging-foreground = ${colors.red-2}
 animation-charging-0 = " "
@@ -97,13 +97,13 @@ animation-charging-6 = " "
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity><label-discharging>
-format-discharging-underline = ${colors.red-2}
+# format-discharging-underline = ${colors.red-2}
 format-discharging-background = ${colors.bg-1}
 format-discharging-foreground = ${colors.red-2}
 label-discharging = ${self.label-charging}
-label-discharging-underline = ${colors.red-2}
+# label-discharging-underline = ${colors.red-2}
 label-discharging-background = ${colors.bg-1}
-label-discharging-foreground = ${colors.fg-3}
+label-discharging-foreground = ${colors.fg-1}
 
 ramp-capacity-0 = " "
 ramp-capacity-1 = " "
@@ -120,9 +120,9 @@ format-full-prefix-background = ${colors.bg-1}
 format-full-prefix-foreground = ${colors.red-2}
 format-full-prefix = " "
 label-full = ${self.label-charging}
-label-full-underline = ${colors.red-2}
+# label-full-underline = ${colors.red-2}
 label-full-background = ${colors.bg-1}
-label-full-foreground = ${colors.fg-3}
+label-full-foreground = ${colors.fg-1}
 format-full = <label-full>
-format-full-underline = ${colors.red-2}
+# format-full-underline = ${colors.red-2}
 
