--- a/.config/polybar/modules/util.ini
+++ b/.config/polybar/modules/util.ini
@@ -6,7 +6,7 @@ icon-2 = 3;III
 icon-3 = 4;IV
 
 label-active = %icon%
-label-active-underline= ${colors.blue-1}
+# label-active-underline= ${colors.blue-1}
 label-active-background = ${colors.bg-1}
 label-active-foreground= ${colors.blue-2}
 label-active-padding = 1
@@ -22,7 +22,7 @@ label-urgent-padding = 1
 
 label-empty = %icon%
 label-empty-background = ${colors.bg-1}
-label-empty-foreground = ${colors.fg-3}
+label-empty-foreground = ${colors.fg-1}
 label-empty-padding = 1
 
 
@@ -34,7 +34,7 @@ icon-2 = 7;VII
 icon-3 = 8;IIX
 
 label-active = %icon%
-label-active-underline= ${colors.blue-1}
+# label-active-underline= ${colors.blue-1}
 label-active-background = ${colors.bg-1}
 label-active-foreground= ${colors.blue-2}
 label-active-padding = 1
@@ -50,7 +50,7 @@ label-urgent-padding = 1
 
 label-empty = %icon%
 label-empty-background = ${colors.bg-1}
-label-empty-foreground = ${colors.fg-3}
+label-empty-foreground = ${colors.fg-1}
 label-empty-padding = 1
 
 
@@ -65,9 +65,9 @@ label-maxlen = 50
 [module/date]
 type = internal/date
 interval = 5
-label-underline = ${colors.blue-1}
+# label-underline = ${colors.blue-1}
 label-background = ${colors.bg-1}
-label-foreground = ${colors.fg-3}
+label-foreground = ${colors.fg-1}
 time = %d-%m-%Y
 label = %time%
 
@@ -76,12 +76,12 @@ label = %time%
 type = internal/date
 interval = 1
 format-prefix = "󰅐  "
-format-prefix-underline = ${colors.blue-1}
+# format-prefix-underline = ${colors.blue-1}
 format-prefix-background = ${colors.bg-1}
-format-prefix-foreground = ${colors.blue-2}
-label-underline = ${colors.blue-1}
+format-prefix-foreground = ${colors.blue-3}
+# label-underline = ${colors.blue-1}
 label-background = ${colors.bg-1}
-label-foreground = ${colors.fg-3}
+label-foreground = ${colors.fg-1}
 time = %H:%M 
 label = %time%
 
@@ -91,7 +91,7 @@ type = custom/script
 exec = ~/.config/scripts/polybar/info-hackspeed.sh
 tail = true
 
-format-underline = ${colors.green-2}
+# format-underline = ${colors.green-2}
 format-background = ${colors.bg-1}
 format-foreground = ${colors.green-2}
 
