--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -4,24 +4,24 @@ interface-type = wireless
 interval = 1.0
 
 format-connected = <label-connected>
-format-connected-underline = ${colors.cyan-2}
+# format-connected-underline = ${colors.cyan-2}
 format-connected-background = ${colors.bg-1}
 format-connected-foreground = ${colors.fg-1}
 
 format-disconnected = <label-disconnected>
-format-disconnected-underline = ${colors.red-2}
+# format-disconnected-underline = ${colors.red-2}
 format-disconnected-background = ${colors.bg-1}
 format-disconnected-foreground = ${colors.fg-1}
 
 label-connected = %upspeed% %downspeed%
-label-connected-underline = ${colors.cyan-2}
+# label-connected-underline = ${colors.cyan-2}
 label-connected-background = ${colors.bg-1}
 label-connected-foreground = ${colors.fg-1}
 
 label-disconnected-prefix = "睊 "
 label-disconnected-prefix-foreground = ${colors.red-2}
 label-disconnected = "Offline"
-label-disconnected-underline = ${colors.red-2}
+# label-disconnected-underline = ${colors.red-2}
 label-disconnected-background = ${colors.bg-1}
 label-disconnected-foreground = ${colors.fg-1}
 
@@ -36,22 +36,22 @@ speed-unit = B/s
 
 format-connected = <label-connected>
 format-connected-prefix = "󰤨  "
-format-connected-prefix-underline = ${colors.cyan-2}
+# format-connected-prefix-underline = ${colors.cyan-2}
 format-connected-prefix-background = ${colors.bg-1}
 format-connected-prefix-foreground = ${colors.cyan-2}
 
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = "󰤮  "
-format-disconnected-prefix-underline = ${colors.red-2}
+# format-disconnected-prefix-underline = ${colors.red-2}
 format-disconnected-prefix-background = ${colors.bg-1}
 format-disconnected-prefix-foreground = ${colors.red-2}
 
 label-connected = %netspeed%
-label-connected-underline = ${colors.cyan-2}
+# label-connected-underline = ${colors.cyan-2}
 label-connected-background = ${colors.bg-1}
 label-connected-foreground = ${colors.fg-1}
 
 label-disconnected = "Offline"
-label-disconnected-underline = ${colors.red-2}
+# label-disconnected-underline = ${colors.red-2}
 label-disconnected-background = ${colors.bg-1}
 label-disconnected-foreground = ${colors.fg-1}
