--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -83,28 +83,28 @@ color0	#12121f
 color8	#4f5071
 
 # Red
-color1	#de688a
-color9	#d74770
+color1	#bf4d7a
+color9	#bd4577
 
 # Green
-color2	#8fe0b4
-color10	#6fd89e
+color2	#78d2b7
+color10	#6dccb3
 
 # Yellow
-color3	#fdf5b0
-color11 #fcf39c
+color3	#e5daa3
+color11 #e3d79e
 
 # Blue
-color4	#83a8ec
-color12	#729ce9
+color4	#829eed
+color12	#7a96e6
 
 # Purple
-color5	#8983d8
-color13	#7a73d3
+color5	#988be5
+color13	#9385e3
 
 # Cyan
-color6	#89e6e4
-color14	#65dedc
+color6	#84d7ee
+color14	#7ad3ec
 
 # White
 color7	#d4d7ff
