--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -13,31 +13,30 @@ grey-1 = #4f5071
 grey-2 = #595b7e
 grey-3 = #63658b
 
-red-1 = #de688a
-red-2 = #da587d
-red-3 = #d74770
+red-1 = #bf4d7a
+red-2 = #c04779
+red-3 = #bd4577
 
-purple-1 = #9792dd
-purple-2 = #8983d8
-purple-3 = #7a73d3
+purple-1 = #988be5
+purple-2 = #9688e4
+purple-3 = #9385e3
 
-blue-1 = #83a8ec
-blue-2 = #729ce9
-blue-3 = #608fe6
+blue-1 = #829eed
+blue-2 = #7e9aea
+blue-3 = #7a96e6
 
-cyan-1 = #89e6e4
-cyan-2 = #78e2e1
-cyan-3 = #65dedc
+cyan-1 = #84d7ee
+cyan-2 = #7ed5ed
+cyan-3 = #7ad3ec
 
-green-1 = #8fe0b4
-green-2	= #7fdca9
-green-3	= #6fd89e
+green-1 = #78d2b7
+green-2	= #70cfb3
+green-3	= #6dccb3
 
-yellow-1 = #fdf5b0
-yellow-2 = #fcf39c
-yellow-3 = #fbf088
+yellow-1 = #e5daa3
+yellow-2 = #e5d99e
+yellow-3 = #e3d79e
 
-orange-1 = #e7c188
-orange-2 = #e3b878
-orange-3 = #e0af67
-
+orange-1 = #e8b57b
+orange-2 = #e8b379
+orange-3 = #e3b178
