--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -83,28 +83,28 @@ color0	#12121f
 color8	#4f5071
 
 # Red
-color1	#bf4d7a
-color9	#bd4577
+color1	#C94A70
+color9	#C75275
 
 # Green
-color2	#78d2b7
-color10	#6dccb3
+color2	#70D7B9
+color10	#7FDCC0
 
 # Yellow
-color3	#e5daa3
-color11 #e3d79e
+color3	#E5D99F
+color11 #E6DCA7
 
 # Blue
-color4	#829eed
-color12	#7a96e6
+color4	#74B8FB
+color12	#84BFFB
 
 # Purple
-color5	#988be5
-color13	#9385e3
+color5	#9688E4
+color13	#A093E6
 
-# Cyan
-color6	#84d7ee
-color14	#7ad3ec
+# Pale Cyan
+color6	#8DD7F7
+color14	#9BDCF8
 
 # White
 color7	#d4d7ff
