--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -13,30 +13,29 @@ grey-1 = #4f5071
 grey-2 = #595b7e
 grey-3 = #63658b
 
-red-1 = #bf4d7a
-red-2 = #c04779
-red-3 = #bd4577
+red-1 = #C94A70
+red-2 = #C75275
 
-purple-1 = #988be5
-purple-2 = #9688e4
-purple-3 = #9385e3
+purple-1 = #9688E4
+purple-2 = #A093E6
 
-blue-1 = #829eed
-blue-2 = #7e9aea
-blue-3 = #7a96e6
+pale_purple-1 = #99B3FF
+pale_purple-2 = #A3BAFF
 
-cyan-1 = #84d7ee
-cyan-2 = #7ed5ed
-cyan-3 = #7ad3ec
+blue-1 = #74B8FB
+blue-2 = #84BFFB
 
-green-1 = #78d2b7
-green-2	= #70cfb3
-green-3	= #6dccb3
+pale-cyan-1 = #8DD7F7
+pale-cyan-2 = #9BDCF8
 
-yellow-1 = #e5daa3
-yellow-2 = #e5d99e
-yellow-3 = #e3d79e
+cyan-1 = #44F8F8
+cyan-2 = #51FBFB
 
-orange-1 = #e8b57b
-orange-2 = #e8b379
-orange-3 = #e3b178
+green-1 = #70D7B9
+green-2	= #7FDCC0
+
+yellow-1 = #E5D99F
+yellow-2 = #E6DCA7
+
+orange-1 = #ECBE8E
+orange-2 = #EDC396
