--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -4,7 +4,7 @@ interface-type = wireless
 interval = 1.0
 
 format-connected = <label-connected>
-# format-connected-underline = ${colors.cyan-2}
+# format-connected-underline = ${colors.pale-cyan-2}
 format-connected-background = ${colors.bg-1}
 format-connected-foreground = ${colors.fg-1}
 
@@ -14,7 +14,7 @@ format-disconnected-background = ${colors.bg-1}
 format-disconnected-foreground = ${colors.fg-1}
 
 label-connected = %upspeed% %downspeed%
-# label-connected-underline = ${colors.cyan-2}
+# label-connected-underline = ${colors.pale-cyan-2}
 label-connected-background = ${colors.bg-1}
 label-connected-foreground = ${colors.fg-1}
 
@@ -36,9 +36,9 @@ speed-unit = B/s
 
 format-connected = <label-connected>
 format-connected-prefix = "󰤨  "
-# format-connected-prefix-underline = ${colors.cyan-2}
+# format-connected-prefix-underline = ${colors.pale-cyan-2}
 format-connected-prefix-background = ${colors.bg-1}
-format-connected-prefix-foreground = ${colors.cyan-2}
+format-connected-prefix-foreground = ${colors.pale-cyan-1}
 
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = "󰤮  "
@@ -47,7 +47,7 @@ format-disconnected-prefix-background = ${colors.bg-1}
 format-disconnected-prefix-foreground = ${colors.red-2}
 
 label-connected = %netspeed%
-# label-connected-underline = ${colors.cyan-2}
+# label-connected-underline = ${colors.pale-cyan-2}
 label-connected-background = ${colors.bg-1}
 label-connected-foreground = ${colors.fg-1}
 
