--- a/.config/polybar/modules/sys_info.ini
+++ b/.config/polybar/modules/sys_info.ini
@@ -17,12 +17,12 @@ label-mounted-foreground = ${colors.fg-1}
 type = internal/cpu
 interval = 2
 format-prefix = " "
-# format-prefix-underline = ${colors.cyan-2}
-format-prefix-foreground = ${colors.cyan-2}
+# format-prefix-underline = ${colors.pale-cyan-2}
+format-prefix-foreground = ${colors.pale-cyan-2}
 format-background = ${colors.bg-1}
 format = <label> 
 label = %percentage%%
-# label-underline = ${colors.cyan-2}
+# label-underline = ${colors.pale-cyan-2}
 label-foreground = ${colors.fg-1}
 
 
@@ -41,9 +41,9 @@ format-prefix-foreground = ${colors.blue-2}
 
 format-warn = <label-warn>
 format-warn-prefix = " "
-# format-warn-prefix-underline = ${colors.yellow-3}
+# format-warn-prefix-underline = ${colors.yellow-2}
 format-warn-prefix-background = ${colors.bg-1}
-format-warn-prefix-foreground = ${colors.yellow-3}
+format-warn-prefix-foreground = ${colors.yellow-2}
 
 label = %temperature-c%
 # label-underline = ${colors.blue-1}
@@ -51,7 +51,7 @@ label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-1}
 
 label-warn = %temperature-c%
-# label-warn-underline = ${colors.yellow-3}
+# label-warn-underline = ${colors.yellow-2}
 label-warn-background = ${colors.bg-1}
 label-warn-foreground = ${colors.fg-1}
 
