--- a/.config/polybar/modules/util.ini
+++ b/.config/polybar/modules/util.ini
@@ -65,7 +65,7 @@ label-maxlen = 50
 [module/date]
 type = internal/date
 interval = 5
-# label-underline = ${colors.blue-1}
+# label-underline = ${2olors.blue-1}
 label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-1}
 time = %d-%m-%Y
@@ -78,7 +78,7 @@ interval = 1
 format-prefix = "󰅐  "
 # format-prefix-underline = ${colors.blue-1}
 format-prefix-background = ${colors.bg-1}
-format-prefix-foreground = ${colors.blue-3}
+format-prefix-foreground = ${colors.blue-2}
 # label-underline = ${colors.blue-1}
 label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-1}
