Update color palette

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -83,28 +83,28 @@ color0	#12121f
 color8	#4f5071
 
 # Red
-color1	#C94A70
-color9	#C75275
+color1	#bd4277
+color9	#bf4a7f
 
 # Green
-color2	#70D7B9
-color10	#7FDCC0
+color2	#74d2b7
+color10	#7ed7c0
 
 # Yellow
-color3	#E5D99F
-color11 #E6DCA7
+color3	#e5dca4
+color11 #ecdfac
 
 # Blue
-color4	#74B8FB
-color12	#84BFFB
+color4	#87bff7
+color12	#8fc8fa
 
 # Purple
-color5	#9688E4
-color13	#A093E6
+color5	#9486e4
+color13	#9f95e9
 
-# Pale Cyan
-color6	#8DD7F7
-color14	#9BDCF8
+# Ice
+color6	#9be9f8
+color14	#aaecf8
 
 # White
 color7	#d4d7ff
