--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -13,29 +13,23 @@ grey-1 = #4f5071
 grey-2 = #595b7e
 grey-3 = #63658b
 
-red-1 = #C94A70
-red-2 = #C75275
+red-1 = #bd4277
+red-2 = #bf4a7f
 
-purple-1 = #9688E4
-purple-2 = #A093E6
+purple-1 = #9486e4
+purple-2 = #9f95e9
 
-pale_purple-1 = #99B3FF
-pale_purple-2 = #A3BAFF
+lilac-1 = #88a4f7
+lilac-2 = #94aef9
 
-blue-1 = #74B8FB
-blue-2 = #84BFFB
+blue-1 = #87bff7
+blue-2 = #8fc8fa
 
-pale-cyan-1 = #8DD7F7
-pale-cyan-2 = #9BDCF8
+ice-1 = #9be9f8
+ice-2 = #aaecf8
 
-cyan-1 = #44F8F8
-cyan-2 = #51FBFB
+green-1 = #9be9f8
+green-2	= #7ed7c0
 
-green-1 = #70D7B9
-green-2	= #7FDCC0
-
-yellow-1 = #E5D99F
-yellow-2 = #E6DCA7
-
-orange-1 = #ECBE8E
-orange-2 = #EDC396
+yellow-1 = #e5dca4
+yellow-2 = #ecdfac
