--- a/.config/polybar/modules/audio.ini
+++ b/.config/polybar/modules/audio.ini
@@ -5,17 +5,14 @@ interval = 1
 
 format-volume = <label-volume>
 format-volume-prefix = "  "
-# format-volume-prefix-underline = ${colors.purple-1}
 format-volume-prefix-background = ${colors.bg-1}
-format-volume-prefix-foreground = ${colors.purple-2}
+format-volume-prefix-foreground = ${colors.lilac-2}
 label-volume = %percentage%%
-# label-volume-underline = ${colors.purple-1}
 label-volume-background = ${colors.bg-1}
 label-volume-foreground = ${colors.fg-3}
 
 format-muted = <label-muted>
 label-muted = "ﱝ "
-# label-muted-underline = ${colors.red-2}
 label-muted-background = ${colors.bg-1}
 label-muted-foreground = ${colors.red-2}
 
