--- a/.config/polybar/modules/sys_info.ini
+++ b/.config/polybar/modules/sys_info.ini
@@ -4,11 +4,9 @@ interval = 25
 
 mount-0 = /
 format-mounted-prefix = " "
-# format-mounted-prefix-underline = ${colors.purple-1}
 format-mounted-prefix-background = ${colors.bg-1}
-format-mounted-prefix-foreground = ${colors.purple-2}
+format-mounted-prefix-foreground = ${colors.lilac-2}
 label-mounted = %used%
-# label-mounted-underline = ${colors.purple-1}
 label-mounted-background = ${colors.bg-1}
 label-mounted-foreground = ${colors.fg-1}
 
@@ -17,12 +15,10 @@ label-mounted-foreground = ${colors.fg-1}
 type = internal/cpu
 interval = 2
 format-prefix = " "
-# format-prefix-underline = ${colors.pale-cyan-2}
-format-prefix-foreground = ${colors.pale-cyan-2}
+format-prefix-foreground = ${colors.ice-2}
 format-background = ${colors.bg-1}
 format = <label> 
 label = %percentage%%
-# label-underline = ${colors.pale-cyan-2}
 label-foreground = ${colors.fg-1}
 
 
@@ -35,23 +31,19 @@ units = true
 
 format = <label>
 format-prefix = " "
-# format-prefix-underline = ${colors.blue-1}
 format-prefix-background = ${colors.bg-1}
 format-prefix-foreground = ${colors.blue-2}
 
 format-warn = <label-warn>
 format-warn-prefix = " "
-# format-warn-prefix-underline = ${colors.yellow-2}
 format-warn-prefix-background = ${colors.bg-1}
 format-warn-prefix-foreground = ${colors.yellow-2}
 
 label = %temperature-c%
-# label-underline = ${colors.blue-1}
 label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-1}
 
 label-warn = %temperature-c%
-# label-warn-underline = ${colors.yellow-2}
 label-warn-background = ${colors.bg-1}
 label-warn-foreground = ${colors.fg-1}
 
@@ -59,12 +51,10 @@ label-warn-foreground = ${colors.fg-1}
 type = internal/memory
 interval = 2
 format-prefix = " "
-# format-prefix-underline = ${colors.red-2}
 format-prefix-background = ${colors.bg-1}
 format-prefix-foreground = ${colors.red-2}
 format-background = ${colors.bg-1}
 label = %percentage_used:2%%
-# label-underline = ${colors.red-2}
 label-foreground = ${colors.fg-1}
 
 
@@ -80,11 +70,9 @@ time-format = %H:%M
 
 format-charging = <animation-charging><label-charging>
 label-charging = %percentage%%
-# label-charging-underline = ${colors.red-2}
 label-charging-background = ${colors.bg-1}
 label-charging-foreground = ${colors.fg-1}
 
-# animation-charging-underline = ${colors.red-2}
 animation-charging-background = ${colors.bg-1}
 animation-charging-foreground = ${colors.red-2}
 animation-charging-0 = " "
@@ -97,11 +85,9 @@ animation-charging-6 = " "
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity><label-discharging>
-# format-discharging-underline = ${colors.red-2}
 format-discharging-background = ${colors.bg-1}
 format-discharging-foreground = ${colors.red-2}
 label-discharging = ${self.label-charging}
-# label-discharging-underline = ${colors.red-2}
 label-discharging-background = ${colors.bg-1}
 label-discharging-foreground = ${colors.fg-1}
 
@@ -120,9 +106,7 @@ format-full-prefix-background = ${colors.bg-1}
 format-full-prefix-foreground = ${colors.red-2}
 format-full-prefix = " "
 label-full = ${self.label-charging}
-# label-full-underline = ${colors.red-2}
 label-full-background = ${colors.bg-1}
 label-full-foreground = ${colors.fg-1}
 format-full = <label-full>
-# format-full-underline = ${colors.red-2}
 
