Switched terminal to 'wezterm'

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -35,7 +35,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec wezterm
 
 # start ranger
 bindsym $mod+n exec "bash /home/$USER/.config/scripts/application/launch_ranger.sh"
