--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -18,9 +18,9 @@ animations {
 
 background {
     monitor =
-	path = /home/$USER/Images/rice_wallpaper/flower_2.jpg
+	path = /$HOME/Images/rice_wallpaper/flower_2.jpg
     # path = screenshot
-    blur_passes = 0
+    blur_passes = 2
 	blur_size = 3
 }
 
