--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,7 +1,5 @@
-preload = /home/$USER/Images/rice_wallpaper/flower_1.png
-preload = /home/$USER/Images/rice_wallpaper/flower_2.jpg
-preload = /home/$USER/Images/rice_wallpaper/nord-shards.png
+# preload = /home/$USER/Images/rice_wallpaper/flower_1.png
+preload = $HOME/Images/rice_wallpaper/flower_2.jpg
+# preload = /home/$USER/Images/rice_wallpaper/nord-shards.png
 
-# wallpaper = , /home/$USER/Images/rice_wallpaper/flower_1.png
-wallpaper = , /home/$USER/Images/rice_wallpaper/flower_2.jpg
-# wallpaper = , /home/$USER/Images/rice_wallpaper/nord-shards.png
+wallpaper = , $HOME/Images/rice_wallpaper/flower_2.jpg
