--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -190,9 +190,11 @@ bind = $mainMod&Control_L, P, exec, /home/$USER/eww/target/release/eww close pow
 bind = $mainMod&Shift, O, exec, /home/$USER/eww/target/release/eww open calendar
 bind = $mainMod&Control_L, O, exec, /home/$USER/eww/target/release/eww close calendar
 
-# Flameshot screenshots
-bind = $mainMod, Print, exec, --no-startup-id flameshot screen
-bind = $mainMod&Shift, Print, exec, --no-startup-id flameshot gui
+# Hyprshot
+bind = , Print, exec, hyprshot -m window -o /$HOME/Images/screenshots
+bind = $mainMod, Print, exec, hyprshot -m output -o /$HOME/Images/screenshots
+bind = $mainMod&Shift, Print, exec, hyprshot -m region -o /$HOME/Images/screenshots
+
 
 # System update
 bind = $mainMod, U, exec, /home/$USER/.config/scripts/system/update.sh
