--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -71,7 +71,7 @@ label {
 # DATE
 label {
     monitor =
-    text = cmd[update:60000] date +"%d %m %Y" # update every 60 seconds
+    text = cmd[update:60000] date +"%d-%m-%Y" # update every 60 seconds
     font_size = 24
     font_family = $font
     font_color = rgb(212, 215, 255)
