--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -131,10 +131,8 @@ input {
 ### KEYBINDINGS ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
@@ -143,6 +141,7 @@ bind = $mainMod, w, togglefloating,
 bind = $mainMod, d, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -194,7 +193,6 @@ bind = $mainMod&Control_L, O, exec, /home/$USER/eww/target/release/eww close cal
 bind = , Print, exec, hyprshot -m window -o /$HOME/Images/screenshots
 bind = $mainMod, Print, exec, hyprshot -m output -o /$HOME/Images/screenshots
 bind = $mainMod&Shift, Print, exec, hyprshot -m region -o /$HOME/Images/screenshots
-
 
 # System update
 bind = $mainMod, U, exec, /home/$USER/.config/scripts/system/update.sh
