--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ workspace=5,6,7,8
 ###################
 
 $terminal = wezterm
+$browser = zen-browser
 $fileManager = ranger
 $menu = rofi -modi drun -show drun
 
@@ -21,8 +22,18 @@ $menu = rofi -modi drun -show drun
 ### AUTOSTART ###
 #################
 
-exec-once = $terminal
-exec-once = waybar & hyprpaper & hypridle & brave & picom & dunst -config "/home/$USER/.config/dunst/dunstrc"
+exec-once = [workspace 0 silent] $terminal
+exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 3 silent] $browser
+exec-once = [workspace 4 silent] librewriter
+exec-once = [workspace 5 silent] spotify
+exec-once = [workspace 6 silent] $browser
+exec-once = [workspace 7 silent] $terminal
+exec-once = [workspace 8 silent] $browser
+exec-once = [workspace 9 silent] $browser
+exec-once = [workspace 10 silent] $terminal
+
+exec-once = waybar & hyprpaper & hypridle & picom & dunst -config "/home/$USER/.config/dunst/dunstrc"
 
 
 #############################
@@ -219,8 +230,16 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+workspace = 1,monitor:"eDP-1",default:true
+workspace = 2,monitor:"eDP-1"
+workspace = 3,monitor:"eDP-1"
+workspace = 4,monitor:"eDP-1"
+workspace = 5,monitor:"eDP-1"
+workspace = 6,monitor:"HDMI-A-1",default:true
+workspace = 7,monitor:"HDMI-A-1"
+workspace = 8,monitor:"HDMI-A-1"
+workspace = 9,monitor:"HDMI-A-1"
+workspace = 10,monitor:"HDMI-A-1"
 
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
